<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingBottom="16dp"
    android:background="@drawable/background_gradient_light"
    tools:context=".presentation.screens.change_credentials.ChangeCredentialsFragment">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_credentials"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:fontFamily="@font/ibm_plex_mono_medium_compose"
        android:background="@color/lightYellow"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Изменение имени пользователя -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_username_label"
                android:fontFamily="@font/ibm_plex_mono_medium_compose"
                android:background="@color/lightYellow"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_username_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_username_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibm_plex_mono_compose"
                    android:inputType="text"
                    android:hint="@string/username" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Изменение города -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_city_label"
                android:fontFamily="@font/ibm_plex_mono_medium_compose"
                android:background="@color/lightYellow"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_city_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <Spinner
                    android:id="@+id/city_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibm_plex_mono_compose"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Изменение пароля -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password_label"
                android:fontFamily="@font/ibm_plex_mono_medium_compose"
                android:background="@color/lightYellow"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_reset_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registered_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibm_plex_mono_compose"
                    android:hint="@string/your_registered_email" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:background="@color/lightRed"
                android:fontFamily="@font/ibm_plex_mono_compose"
                android:text="@string/reset_password_link_will_be_sent_to_your_email"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:background="@color/lightRed"
                android:fontFamily="@font/ibm_plex_mono_compose"
                android:text="@string/you_cannot_change_the_password_if_you_have_been_authenticated_a_very_long_time_ago"
                android:textSize="12sp"
                android:layout_marginTop="4dp"/>

            <!-- Кнопка "Сохранить" -->
            <Button
                android:id="@+id/save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_new_credentials"
                android:fontFamily="@font/ibm_plex_mono_compose"
                android:backgroundTint="@color/yellow"
                android:layout_marginTop="16dp"/>

            <Button
                android:id="@+id/exit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ibm_plex_mono_compose"
                android:backgroundTint="@color/yellow"
                android:layout_marginVertical="10dp"
                android:text="@string/exit" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
