<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingBottom="16dp"
    android:background="@drawable/background_gradient_light"
    tools:context=".presentation.screens.profile.ProfileFragment">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:fontFamily="@font/ibm_plex_mono_medium_compose"
        android:background="@color/lightYellow"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar_iv"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/unnamed"
                android:scaleType="centerCrop"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/avatar_image"
                android:layout_marginTop="16dp"
                app:civ_border_color="@color/yellow"
                app:civ_border_width="2dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <ProgressBar
                    android:id="@+id/loadingProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <TextView
                    android:id="@+id/username_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username_label"
                    android:fontFamily="@font/ibm_plex_mono_medium_compose"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/username_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibm_plex_mono_compose"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/username_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    android:layout_marginStart="4dp"/>

                <TextView
                    android:id="@+id/email_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_label"
                    android:fontFamily="@font/ibm_plex_mono_medium_compose"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/username_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="16dp"/>

                <TextView
                    android:id="@+id/email_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibm_plex_mono_compose"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/email_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/username_tv"
                    android:layout_marginTop="16dp"
                    app:layout_constraintHorizontal_bias="0"
                    android:layout_marginStart="4dp"/>

                <TextView
                    android:id="@+id/city_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city_label"
                    android:fontFamily="@font/ibm_plex_mono_medium_compose"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/email_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="16dp"/>

                <TextView
                    android:id="@+id/city_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibm_plex_mono_compose"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/city_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email_tv"
                    android:layout_marginTop="16dp"
                    app:layout_constraintHorizontal_bias="0"
                    android:layout_marginStart="4dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/change_credentials_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_credentials"
            android:fontFamily="@font/ibm_plex_mono_compose"
            android:backgroundTint="@color/yellow"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/favourite_events_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_mono_compose"
            android:backgroundTint="@color/yellow"
            android:text="@string/favourite_events"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_mono_compose"
            android:backgroundTint="@color/red"
            android:text="@string/logout"
            android:layout_marginTop="16dp" />
    </LinearLayout>
</LinearLayout>

